Cuarta carga del Código de la AppBasica

--- a/app/src/main/res/layout/activity_calculadora.xml
+++ b/app/src/main/res/layout/activity_calculadora.xml
@@ -93,7 +93,7 @@
         android:id="@+id/lblmensaje"
         android:textStyle="bold|italic"
         android:textColor="@color/purple_500"
-        android:text="@string/strmenu"
+        android:text="@string/strlblresultado"
         />
 
 </LinearLayout>
